@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: play.c,v 1.191 2003/06/09 15:25:21 thyssen Exp $
+ * $Id: play.c,v 1.192 2003/07/11 10:41:04 thyssen Exp $
  */
 
 #include "config.h"
@@ -3682,7 +3682,7 @@ CommandRoll( char *sz ) {
   }
 
   if( ms.anDice[ 0 ] ) {
-    outputl( _("You already did roll the dice.") );
+    outputl( _("You have already rolled the dice.") );
 
     return;
   }
